--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <!-- Game Controls -->
         <div id="game-controls">
-            <button id="start-game">Start Game</button>
+			<button id="start-game" disabled>Start Game</button>
             <button id="show-hierarchy">Show Card Hierarchy</button>
             <button id="end-phase" style="display: none;">End Phase</button>
         </div>
